more size fixes
stop user recents img overflows. no longer absurd fonts for timestamps and box2 classes. (staff) inbox and staff page column width (subject; last active) changes. removed blank <br> in request tags

--- a/darkblue/style.css
+++ b/darkblue/style.css
@@ -126,7 +126,12 @@ img {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	height: 200px;
+	height: 180px;
+	width: 930px;
+}
+
+.layout.recent tr:nth-of-type(2) td {
+  min-width: 0;
 }
 
 .layout.recent tr:nth-of-type(2) td img {
@@ -151,6 +156,7 @@ ul.collage_images li a, ul.collage_images li a img {
 	width: auto;
 	height: auto;
 	max-width: 180px;
+	text-align: center;
 }
 
 span.size1 { font-size: 0.75em; }
@@ -684,11 +690,6 @@ p.min_padding {
 	margin-bottom: 16px;
 }
 
-.box2 {
-	font-size: 1.2em;
-	margin-bottom: 10px;
-}
-
 .pad h3, .pad h4, .padbox h3, .padbox h4 {
 	margin-top: 0;
 	padding-top: 0;
@@ -709,7 +710,6 @@ p.min_padding {
 }
 
 .main_column .box .body {
-	font-size: 1.1em;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 }
@@ -780,7 +780,7 @@ td, th, div.head {
 }
 
 .box .head .time {
-	font-size: 1.2em;
+	font-size: 0.9em;
 }
 
 .colhead a, .colhead_dark a, .head a, .noty_text {
@@ -1255,6 +1255,9 @@ form textarea, form input {
 	font-size: 1.1em;
 }
 
+#staff .staff td:nth-of-type(2) {
+	width: 170px !important;
+}
 
 input[type="checkbox"] { position: relative; display: inline-block; padding: 6px; border: 1px solid #3b3b3b; -webkit-appearance: none; }
 input[type="checkbox"]:checked:after { position: absolute; top: -1px; left: 1px; color: #62768a; content: '\2714'; font-size: 12px; }
@@ -1311,7 +1314,9 @@ div.box.center { padding: 3px 0; margin-bottom: 10px; }
 #qrcode img { background-color: white; padding: 10px; } /* ensures scannability */
 #reply_box > h3, #staffpm #inbox > h3, #reports .thin > h3, #inbox .thin > h3 { background-color: #62768a;  border-radius: 2px; padding: 6px; margin-bottom: -1px; } /* reply headers */
 #torrents #reply_box > h3 { margin-bottom: -22px; }
-#staffpm #compose, .badge--holder, .badge--log_box { /* Anything that needs a background */
+
+/* Anything that needs a background */
+#staffpm #compose, .badge--holder, .badge--log_box {
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	border-radius: 2px;
@@ -1331,6 +1336,24 @@ div.box.center { padding: 3px 0; margin-bottom: 10px; }
 
 .history_vote_down {
 	color: #8a6262;
+}
+
+/* Deleted tags on requests.php leave blank spaces */
+ul.stats.nobullet li br {
+	font-size: 0em;
+}
+
+.message_table td[width="50%"] {
+	width: 65%;
+}
+
+	ast_edited {
+	border-top: 1px solid rgba(255, 255, 255, 0.25);
+	padding: 5px 5px 0px 0px;
+	opacity: 0.75;
+	text-align: right;
+	display: block;
+	font-size: 0.9em;
 }
 
 /* Stolen bloated whutbbcode styling */
